--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/prats/anaconda3/bin/python"
+    "python.pythonPath": "C:\\Users\\Kaushik\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
